* Fix fuse.Fusebox wrappers for Number methods toExponential(), toFixed(), and toPrecision(). [jddalton]

* Add `fractionDigits` argument to fuse.Number#round. [Prototype LH #830] [jddalton, Radoslav Stankov]

* Ensure fuse.Fusebox Native methods that return arrays set index values in accending order so de facto order is preserved in for-in loops. [jddalton]

* Rename the fuse.dom.Data object to fuse.dom.data. [jddalton]

* Avoid calling decorator instance method focus() in Form focusFirstControl(). [Diego Perini, jddalton]

* Make fuse.dom.InputElement.EventObserver registerCallback() method use fuse.get() to resolve the `element` argument. [jddalton]

* Rename Form methods getElements() to getControls(), findFirstElement() to getFirstControl(), and focusFirstElement() to focusFirstControl(). [jddalton]
  Note: Backwards compatibility warning.

* Cleanup and optimize form/field files and ensure the getValue/setValue methods are consistent across form control elements. [jddalton]

* Add UA sniff to the fuse.env.agent.IE flag to avoid cases where others have added a window.attachEvent method. [Prototype LH #997] [jddalton, PaulC]

* Refactor codebase to use dom attributes/properties correctly and make a clearer distinction between dom attributes and properties. [David Mark, jddalton]

* Add fuse.dom.Element#removeAttribute method. [jddalton, Joe Gornick]

* Optimize fuse.Function methods by removing `arg` variable aliases of the arguments object. [Andrea Giammarchi, jddalton]

* Make fuse.Function.bind() throw a TypeError if `fn` argument is not a function and refactor native bind branch. [jddalton]

* Add a cache flag argument to fuse.dom.Element.create() to allow devs to specify that the dom decorator is not cached. [jddalton]

* Add fuse.dom.Window decorator. [jddalton]

* Stop extending elements with the getFuseId() method and use `uniqueNumber` if available. [jddalton]

* Move fuse.dom.extendByTag() to fuse.dom.Element.extendByTag(). [jddalton]
